// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard navbar renders correctly in side position 1`] = `

<nav id="dashboard-navbar"
     data-server-rendered="true"
     class="side"
>
  <div class="brand-wrapper navbar-light text-center">
    <nuxt-link to="[object Object]"
               class="brand navbar-brand"
    >
      My Brand
    </nuxt-link>
  </div>
  <ul class="nav">
    <li data-index="0"
        class="nav-item"
    >
      <a href="#/admin/site/dashboard"
         target="_self"
         class="nav-link"
      >
        Dashboard
      </a>
    </li>
    <li data-index="1"
        class="nav-item"
    >
      <a href="#/admin/site/users"
         target="_self"
         class="nav-link"
      >
        Users
      </a>
    </li>
  </ul>
</nav>

`;

exports[`Dashboard navbar renders correctly in top position 1`] = `

<nav id="dashboard-navbar"
     data-server-rendered="true"
     class="top"
>
  <div class="brand-wrapper navbar-light text-center">
    <nuxt-link to="[object Object]"
               class="brand navbar-brand"
    >
      My Brand
    </nuxt-link>
  </div>
  <ul class="nav">
    <li data-index="0"
        class="nav-item"
    >
      <a href="#/admin/site/dashboard"
         target="_self"
         class="nav-link"
      >
        Dashboard
      </a>
    </li>
    <li data-index="1"
        class="nav-item"
    >
      <a href="#/admin/site/users"
         target="_self"
         class="nav-link"
      >
        Users
      </a>
    </li>
  </ul>
</nav>

`;
